src/component/CulturePage/BelongHere/style.css
.heading-text {
  font-family: 'Space Mono';
  text-transform: uppercase;
  font-size: 40px;
  font-weight: 700;
  color: black;
  text-align: left;
  white-space: nowrap;
}

.headingTwo-text {
  font-family: 'Space Mono';
  text-transform: uppercase;
  font-size: 40px;
  font-weight: 700;
  color: black;
  text-align: left;
}

.belong-here {
  padding:1px;
  color: black;
  text-align: left;
  position: relative;
  top: 1px;
  width: 300px;
  height: 400px;
}

.thrive-together {
  display: flex;
  flex-direction: column;
  padding:1px;
  width: 300px;
  height: 400px;
}

.paragraphs {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  height: 400px;
  padding-top: 75px;
}

.color-block {
  text-align: center;
  position: relative;
} 

.graphic {
  height: 900px;
  width: auto;
}

#belong-here-container {
  height: 800px;
  display: flex;
  flex-direction: column;
  position: relative;
  top: -550px;
}

